external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/wildcard_outer_allow_all_inner_deny.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E09002]: unused variable
  ┌─ tests/move_check/warning_suppression/wildcard_outer_allow_all_inner_deny.move:5:16
  │
4 │     #[deny(unused_variable)]
  │            --------------- the lint level is defined here
5 │     fun denied(a: u64) {
  │                ^ Unused parameter 'a'. Consider removing or prefixing with an underscore: '_a'

error[E09002]: unused variable
  ┌─ tests/move_check/warning_suppression/wildcard_outer_allow_all_inner_deny.move:6:13
  │
4 │     #[deny(unused_variable)]
  │            --------------- the lint level is defined here
5 │     fun denied(a: u64) {
6 │         let x;
  │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
